--- a/prizes.html
+++ b/prizes.html
@@ -169,11 +169,355 @@
                   <div class="card-body">
                     <div class="row mb-4">
                       <div class="col-sm-12">
-                        <h6 >Check back in January for complete prize list</h6>
+                        <h2 class="brand-blue">2020 Fish Prize List</h2>
+                        <div class="table-responsive">
+              						<table class="table">
+              							<thead>
+              								<th>Place</th>
+              								<th>Prize</th>
+              							</thead>
+              							<tbody>
+                              <tr>
+                  							<th>1</th>
+                  							<td>1st Place Trophy & Scheels Cooler</td>
+                  						</tr>
+                              <tr>
+                  							<th>2</th>
+                  							<td>Eskimo Sting Ray 33cc 8 Inch Auger</td>
+                  						</tr>
+                              <tr>
+                  							<th>3</th>
+                  							<td>Eskimo QuickFish 2</td>
+                  						</tr>
+                              <tr>
+                  							<th>4</th>
+                  							<td>Barronett Radar Snow Hunting Blind</td>
+                  						</tr>
+                              <tr>
+                  							<th>5</th>
+                  							<td>Eskimo Quickfish 3</td>
+                  						</tr>
+                              <tr>
+                  							<th>6</th>
+                  							<td>$50 Scheels Gift Card</td>
+                  						</tr>
+                              <tr>
+                  							<th>7</th>
+                  							<td>River's Edge Classic 1-Man Ladder Stand</td>
+                  						</tr>
+                              <tr>
+                  							<th>8</th>
+                  							<td>$50 Mega/Holiday Gift Card</td>
+                  						</tr>
+                              <tr>
+                  							<th>9</th>
+                  							<td>Scheels Tournament Fishing Combo & $25 Scheels Gift Card</td>
+                  						</tr>
+                              <tr>
+                  							<th>10</th>
+                  							<td>Aqua-Vu Micro Stealth 4.3 Revolution Underwater Camera System</td>
+                  						</tr>
+                              <tr>
+                  							<th>11</th>
+                  							<td>River's Edge 18FT 2-Man Ladder Stand</td>
+                  						</tr>
+                              <tr>
+                  							<th>12</th>
+                  							<td>Ice Armor Jacket - XL</td>
+                  						</tr>
+                              <tr>
+                  							<th>13</th>
+                  							<td>Moultrie A300 Game Camera </td>
+                  						</tr>
+                              <tr>
+                  							<th>14</th>
+                  							<td>$50 Mega/Holiday Gift Card</td>
+                  						</tr>
+                              <tr>
+                  							<th>15</th>
+                  							<td>ION 8 Inch Ice Auger</td>
+                  						</tr>
+                              <tr>
+                  							<th>16</th>
+                  							<td>Eskimo 6 Inch Hand Auger</td>
+                  						</tr>
+                              <tr>
+                  							<th>17</th>
+                  							<td>$50 Scheels Gift Card</td>
+                  						</tr>
+                              <tr>
+                  							<th>18</th>
+                  							<td>Barronett Radar Backwoods Hunting Blind</td>
+                  						</tr>
+                              <tr>
+                  							<th>19</th>
+                  							<td>River's Edge Big Foot XL Classic Hang-On Stand</td>
+                  						</tr>
+                              <tr>
+                  							<th>20</th>
+                  							<td>$50 Mega/Holiday Gift Card</td>
+                  						</tr>
+                              <tr>
+                  							<th>21</th>
+                  							<td>Beaver Dam Bucket</td>
+                  						</tr>
+                              <tr>
+                  							<th>22</th>
+                  							<td>Eskimo Pistol Bit 6 Inch Auger</td>
+                  						</tr>
+                              <tr>
+                  							<th>23</th>
+                  							<td>Tip Down Orange & Fishwell Float Livewell</td>
+                  						</tr>
+                              <tr>
+                  							<th>24</th>
+                  							<td>Eskimo 8 Inch Hand Auger</td>
+                  						</tr>
+                              <tr>
+                  							<th>25</th>
+                  							<td>*$500 Cash</td>
+                  						</tr>
+                              <tr>
+                  							<th>30</th>
+                  							<td>River's Edge Relax Wide 1-Man Ladder Stand</td>
+                  						</tr>
+                              <tr>
+                  							<th>35</th>
+                  							<td>Pflueger Trion Spinning Reel</td>
+                  						</tr>
+                              <tr>
+                  							<th>40</th>
+                  							<td>Scheels Outfitters Guide Inline Ice Combo </td>
+                  						</tr>
+                              <tr>
+                  							<th>45</th>
+                  							<td>   $50 Mega/Holiday Gift Card</td>
+                  						</tr>
+                              <tr>
+                  							<th>50</th>
+                  							<td>River's Edge Big Foot Traveler Hang-On Stand</td>
+                  						</tr>
+                              <tr>
+                  							<th>55</th>
+                  							<td>Eskimo 8 Inch Hand Auger</td>
+                  						</tr>
+                              <tr>
+                  							<th>60</th>
+                  							<td>Scheels Tournament Fishing Combo & $25 Scheels Gift Card</td>
+                  						</tr>
+                              <tr>
+                  							<th>65</th>
+                  							<td>$50 Scheels Gift Card</td>
+                  						</tr>
+                              <tr>
+                  							<th>70</th>
+                  							<td>Barronett Radar Backwoods Hunting Blind</td>
+                  						</tr>
+                              <tr>
+                  							<th>75</th>
+                  							<td>Eskimo 7 Inch Hand Auger</td>
+                  						</tr>
+                              <tr>
+                  							<th>80</th>
+                  							<td>Eskimo Quickfish 3</td>
+                  						</tr>
+                              <tr>
+                  							<th>85</th>
+                  							<td>Beaver Dam Tip Up + Tacklebag Tote System</td>
+                  						</tr>
+                              <tr>
+                  							<th>90</th>
+                  							<td>River's Edge Big Foot XC Hang-On Stand</td>
+                  						</tr>
+                              <tr>
+                  							<th>95</th>
+                  							<td>$50 Scheels Gift Card</td>
+                  						</tr>
+                              <tr>
+                  							<th>100</th>
+                  							<td>*$1,000 Cash</td>
+                  						</tr>
+                              <tr>
+                  							<th>105</th>
+                  							<td>Scheels Hard Side Rod Case</td>
+                  						</tr>
+                              <tr>
+                  							<th>110</th>
+                  							<td>$50 Mega/Holiday Gift Card</td>
+                  						</tr>
+                              <tr>
+                  							<th>115</th>
+                  							<td>River's Edge Classic 1-Man Ladder Stand</td>
+                  						</tr>
+                              <tr>
+                  							<th>120</th>
+                  							<td>Barronett Radar Snow Hunting Blind</td>
+                  						</tr>
+                              <tr>
+                  							<th>125</th>
+                  							<td>Crossfire Binoculars - 10x50</td>
+                  						</tr>
+                              <tr>
+                  							<th>130</th>
+                  							<td>$50 Scheels Gift Card</td>
+                  						</tr>
+                              <tr>
+                  							<th>135</th>
+                  							<td>Eskimo Quickfish 2</td>
+                  						</tr>
+                              <tr>
+                  							<th>140</th>
+                  							<td>River's Edge Deluxe 1-Man Ladder Stand</td>
+                  						</tr>
+                              <tr>
+                  							<th>145</th>
+                  							<td>$50 Mega/Holiday Gift Card</td>
+                  						</tr>
+                              <tr>
+                  							<th>150</th>
+                  							<td>GPS ETREX 10</td>
+                  						</tr>
+                              <tr>
+                  							<th>155</th>
+                  							<td>Barronett Grounder 250 Bloodtrail Hunting Blind</td>
+                  						</tr>
+                              <tr>
+                  							<th>160</th>
+                  							<td>Eskimo 7 Inch Hand Auger</td>
+                  						</tr>
+                              <tr>
+                  							<th>165</th>
+                  							<td>$50 Scheels Gift Card</td>
+                  						</tr>
+                              <tr>
+                  							<th>170</th>
+                  							<td>Beaver Dam Tip Up + Tacklebag Tote System</td>
+                  						</tr>
+                              <tr>
+                  							<th>175</th>
+                  							<td>Eskimo Mako 43cc 8 Inch Auger</td>
+                  						</tr>
+                              <tr>
+                  							<th>180</th>
+                  							<td>RECONYX HYPERFIRE 2 Trail Camera</td>
+                  						</tr>
+                              <tr>
+                  							<th>185</th>
+                  							<td>$50 Mega/Holiday Gift Card</td>
+                  						</tr>
+                              <tr>
+                  							<th>190</th>
+                  							<td>Tip Down Green & Fishwell Float Livewell</td>
+                  						</tr>
+                              <tr>
+                  							<th>195</th>
+                  							<td>River's Edge Relax Wide 1-Man Ladder Stand</td>
+                  						</tr>
+                              <tr>
+                  							<th>200</th>
+                  							<td>*$500 Cash</td>
+                  						</tr>
+                              <tr>
+                  							<th>205</th>
+                  							<td>$50 Scheels Gift Card</td>
+                  						</tr>
+                              <tr>
+                  							<th>210</th>
+                  							<td>Eskimo QuickFlip 1-Man Shelter</td>
+                  						</tr>
+                              <tr>
+                  							<th>215</th>
+                  							<td>Scheels Outfitters Guide Inline Ice Combo </td>
+                  						</tr>
+                              <tr>
+                  							<th>220</th>
+                  							<td>River's Edge Big Foot XC Hang-On Stand</td>
+                  						</tr>
+                              <tr>
+                  							<th>225</th>
+                  							<td>Pflueger Trion Spinning Reel</td>
+                  						</tr>
+                              <tr>
+                  							<th>230</th>
+                  							<td>$50 Mega/Holiday Gift Card</td>
+                  						</tr>
+                              <tr>
+                  							<th>235</th>
+                  							<td>River's Edge Deluxe 1-Man Ladder Stand</td>
+                  						</tr>
+                              <tr>
+                  							<th>240</th>
+                  							<td>$50 Scheels Gift Card</td>
+                  						</tr>
+                              <tr>
+                  							<th>245</th>
+                  							<td>SKINZ IT</td>
+                  						</tr>
+                              <tr>
+                  							<th>250</th>
+                  							<td>Eskimo 6 Inch Hand Auger</td>
+                  						</tr>
+                              <tr>
+                  							<th>255</th>
+                  							<td>$50 Mega/Holiday Gift Card</td>
+                  						</tr>
+                              <tr>
+                  							<th>260</th>
+                  							<td>Moultrie A300 Game Camera </td>
+                  						</tr>
+                              <tr>
+                  							<th>265</th>
+                  							<td>River's Edge Big Foot XL Classic Hang-On Stand</td>
+                  						</tr>
+                              <tr>
+                  							<th>270</th>
+                  							<td>Barronett Grounder 250 Bloodtrail Hunting Blind</td>
+                  						</tr>
+                              <tr>
+                  							<th>275</th>
+                  							<td>ION 8 Inch Ice Auger</td>
+                  						</tr>
+                              <tr>
+                  							<th>280</th>
+                  							<td>Eskimo Mako 43cc 8 Inch Auger</td>
+                  						</tr>
+                              <tr>
+                  							<th>285</th>
+                  							<td>River's Edge Big Foot Traveler Hang-On Stand</td>
+                  						</tr>
+                              <tr>
+                  							<th>290</th>
+                  							<td>Genz Pack FL 8SE Flasher System</td>
+                  						</tr>
+                              <tr>
+                  							<th>295</th>
+                  							<td>Scheels Rectangular Bag & Shimano Sienna Combo</td>
+                  						</tr>
+                              <tr>
+                  							<th>300</th>
+                  							<td>Eskimo Quickflip 2-Man Shelter</td>
+                  						</tr>
+                            </tbody>
+                          </table>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="row mb-2">
+              				<div class="col-sm-12">
+                        <h2 class="brand-blue">2020 The One That Got Away Prize</h2>
+                        <div class="table-responsive">
+              						<table class="table">
+              							<tbody>
+                              <tr>
+                  							<td>Eskimo Stingray 33cc</td>
+                  						</tr>
+                            </tbody>
+                          </table>
+                        </div>
                       </div>
                     </div>
                   </div>
-                </div>   
+                </div>
               </div>
               <div class="card">
                 <div class="card-header" id="headingFour">
